JAVA-2523: Remove a few more uses of deprecated Integer constructor that have crept in since the last check